fixed the spacing of the pricing

--- a/stylesCart.css
+++ b/stylesCart.css
@@ -48,10 +48,10 @@
     padding: 20px 20px 5px 20px;
   }
 
-/* #cart {
+#cart {
   display: flex;
-  
-} */
+  flex-direction: column;
+}
 
 #cartSubmit {
   margin: auto;
@@ -65,6 +65,12 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.288);
   cursor: pointer;
   font-size: 1rem;
+}
+
+#CartPrice {
+   align-self: flex-end;
+   margin-right: 20px;
+   margin-top: 100px;
 }
 
 /* cart styles */
